modifica Quase tudo (: